<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:orientation="horizontal" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:background="@drawable/border"
		android:gravity="center" >

            <TableLayout
		        android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			<TableRow >
				<EditText
	                    android:id="@+id/channel"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:maxLength="1"
			android:layout_weight="1"
			android:gravity="center"
			android:inputType="numberDecimal"/>
				<TextView
	                    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="0dip"
			android:layout_marginRight="10dip"
			android:text="@string/channel"
			android:textColor="@color/white"
			android:layout_weight="1"
			android:textSize="16dip"/>
			</TableRow>
			<TableRow >
			    <CheckBox
			android:id="@+id/checkbox"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="40sp"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
				/>
				<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="40sp"
			android:layout_marginLeft="0dip"
			android:layout_marginRight="10dip"
			android:text="@string/checkbox"
			android:textColor="@color/white"
			android:layout_weight="2"
			android:textSize="16dip"/>
			</TableRow>
			<TableRow>
				<EditText
			android:id="@+id/numSamples"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:maxLength="5"
			android:layout_weight="2"
			android:gravity="center"
			android:inputType="numberDecimal"/>
				<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="0dip"
			android:layout_marginRight="10dip"
			android:text="@string/numSamples"
			android:textColor="@color/white"
			android:layout_weight="2"
			android:textSize="16dip"/>
			</TableRow>
			<TableRow >
				<EditText
			android:id="@+id/samplePeriod"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_marginTop="40sp"
			android:layout_marginBottom="40sp"
			android:maxLength="5"
			android:layout_weight="2"
			android:gravity="center"
			android:inputType="numberDecimal"/>
				<TextView
			android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
	                    android:layout_marginTop="40sp"
                        android:layout_marginBottom="40sp"
                    	android:layout_marginLeft="0dip"
                    	android:layout_marginRight="10dip"
                    	android:text="@string/samplePeriod" 
                    	android:textColor="@color/white"
                    	android:layout_weight="2"
                    	android:textSize="16dip"/>
            	</TableRow>
        	</TableLayout>
                        
        	<Button 
	            android:id="@+id/sample_button"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:textSize="16dip"
            	android:text="@string/sample_button" /> 
        
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:orientation="vertical" 
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip" 
        android:gravity="center"
        android:background="@drawable/border" >
    
        	<TextView 
            	android:layout_width="fill_parent" 
       			android:layout_height="wrap_content"
      			android:text="@string/readSample" 
       			android:textColor="@color/white"
       			android:textSize="16dip"
       			android:gravity="center"/>
      		<EditText 
 	          	android:layout_width="fill_parent" 
      			android:layout_height="wrap_content"
       			android:id="@+id/readSample" 
       			android:maxLength="4"
       			android:layout_marginLeft="100sp"
       			android:layout_marginRight="100sp"
       			android:inputType="numberDecimal"
       			android:gravity="center" />

      		<TextView 
            	android:layout_width="fill_parent" 
       			android:layout_height="wrap_content"
       			android:layout_marginTop="50dip"
      			android:text="@string/receivedSamples" 
       			android:textColor="@color/white"
       			android:textSize="16dip"
       			android:gravity="center"/>
      		<EditText 
 	          	android:layout_width="fill_parent" 
      			android:layout_height="wrap_content"
       			android:id="@+id/receivedSamples" 
       			android:maxLength="5"
       			android:layout_marginLeft="100sp"
       			android:layout_marginRight="100sp"
       			android:inputType="numberDecimal"
       			android:gravity="center" />
        
    </LinearLayout>    
        
</LinearLayout>